--- a/Tutorial/14String/string.html
+++ b/Tutorial/14String/string.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>JavvaSript String</title>
+    <title>JavaSript String</title>
 </head>
 <body>
 <p>txt的长度</p>
