--- a/Tutorial/01introduction/introduction.html
+++ b/Tutorial/01introduction/introduction.html
@@ -14,7 +14,7 @@
 </button>
 
 <p>JavaScript can change HTML attributes.</p>
-<img id="myImg" src="../images/pic_bulboff.gif" alt="">
+<img id="myImg" src="../../images/pic_bulboff.gif" alt="">
 <button onclick="document.getElementById('myImg').src='../images/pic_bulboff.gif'">Click me to turn off the light
 </button>
 <button onclick="document.getElementById('myImg').src='../images/pic_bulbon.gif'">Click me to turn on the light</button>
