--- a/extend/2017_06_23/arithmetic.html
+++ b/extend/2017_06_23/arithmetic.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     /**
-     * @file JavaScript Ajax
+     * @file JavaScript Arithmetic
      * @author 李文辉
      * @copyright 2014-2017 海量云图（北京）数据技术有限公司
      */
